nats/02-dev-nats-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  labels:
    app: nats
    chart: nats-0.0.7
    heritage: Tiller
    release: nats-dev
  name: nats-dev-nats
  namespace: nats
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          canAccessDevNamespace: "true"
    - namespaceSelector:
        matchLabels:
          canAccessNatsNamespace: "true"
    ports:
    - port: 4222
      protocol: TCP
  - ports:
    - port: 6222
      protocol: TCP
  - ports:
    - port: 8222
      protocol: TCP
  podSelector:
    matchLabels:
      app: nats
      release: nats-dev
  policyTypes:
  - Ingress
